# MainProject

./: README.md  pyproject.toml
src/: masks.py  widget.py
